vlib/v/checker/tests/orm_using_undefined_object_in_insert_error.vv
import db.sqlite

struct Node {
	id   int @[primary; sql: serial]
	text string
}

fn main() {
	db := sqlite.connect(':memory:') or { panic(err) }

	sql db {
		create table Node
		insert bug into Node
	}!
}
